Testing/compilefail/CompositeError.cc
#include "Composite.tcc"

template class Composite<composite::result_of::make_list<Act<0,1>,Act<0,2>,Act<0,3>,Act<3,2,5,1> >::type>;
